--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "template"
+name = "listfunc"
 authors = [
-  { name="Test Person", email="test.person@email.com"}]
-description = "template"
+  { name="Yuman Hordijk", email="yumanhordijk@gmail.com"}]
+description = "Useful listmanipulation functions"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
